<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <Button
        android:id="@+id/button_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/create"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_friend_list"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_friend_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_list_label" />

    <EditText
        android:id="@+id/edit_text_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/event_name_label"
        app:layout_constraintTop_toBottomOf="@+id/event_name_label" />

    <Button
        android:id="@+id/edit_date_event_date"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/event_date_label"
        app:layout_constraintTop_toBottomOf="@+id/event_date_label" />

    <Button
        android:id="@+id/button_event_time_start"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="@+id/event_start_time_label"
        app:layout_constraintTop_toBottomOf="@+id/event_start_time_label" />

    <Button
        android:id="@+id/button_event_time_end"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="@+id/event_end_time_label"
        app:layout_constraintTop_toBottomOf="@+id/event_end_time_label" />

    <TextView
        android:id="@+id/event_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_event_name" />

    <TextView
        android:id="@+id/event_end_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/select_end_time"
        app:layout_constraintBottom_toBottomOf="@+id/event_start_time_label"
        app:layout_constraintStart_toEndOf="@+id/button_event_time_start" />

    <TextView
        android:id="@+id/event_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_a_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_event_time_start" />

    <TextView
        android:id="@+id/friend_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_date_event_date" />

    <Button
        android:id="@+id/button_add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView_friend_list"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>